# amradio

./: .gitignore  5k.py  README.md  am_modulator.py  compare.py  convert_wavtorp.py  find.py  requirements-dev.txt  scpi_am_transmit.py  scpi_two_sines.py  wav_to_bram.py
.github/workflows/: ci.yml
am_radio/: .coverage  am_scpi_server.py
am_radio/fpga/: am_radio_ctrl.v  red_pitaya_top.sv  sine_lut_4096.mem  watchdog_timer.v
am_radio/fpga/formal/: README.md  wd.sby
am_radio/fpga/formal/watchdog/: status.sqlite
am_radio/fpga/formal/watchdog_bmc/: PASS  logfile.txt  watchdog_bmc.xml
am_radio/fpga/formal/watchdog_bmc/engine_0/: logfile.txt
am_radio/fpga/formal/watchdog_bmc/model/: design.ys  design_smt2.smt2  design_smt2.ys
am_radio/fpga/formal/watchdog_cover/: PASS  logfile.txt  watchdog_cover.xml
am_radio/fpga/formal/watchdog_cover/engine_0/: logfile.txt  trace0.smtc  trace0.vcd  trace0.yw  trace0_tb.v  trace1.vcd  trace1_tb.v  trace2.vcd  trace2_tb.v  trace3.yw  trace3_tb.v  trace4.smtc  trace4.vcd  trace4.yw  trace4_tb.v
am_radio/fpga/formal/watchdog_cover/model/: design.il  design.ys  design_prep.il  design_smt2.smt2  design_smt2.ys
am_radio/fpga/formal/watchdog_cover/src/: watchdog_formal.v
am_radio/fpga/formal/watchdog_prove/: PASS  config.sby  logfile.txt  watchdog_prove.xml
am_radio/fpga/formal/watchdog_prove/engine_0/: logfile_basecase.txt  logfile_induction.txt
am_radio/fpga/formal/watchdog_prove/model/: design.json  design.ys  design_prep.il  design_smt2.ys
am_radio/fpga/formal/wd/: status.sqlite
am_radio/fpga/formal/wd_cover/: PASS  config.sby  logfile.txt  wd_cover.xml
am_radio/fpga/formal/wd_cover/engine_0/: logfile.txt  trace0.smtc  trace0.vcd  trace0_tb.v  trace1.vcd  trace1_tb.v  trace2.smtc  trace2.vcd  trace2.yw  trace2_tb.v  trace3.smtc  trace3.vcd  trace3.yw  trace3_tb.v
am_radio/fpga/formal/wd_cover/model/: design_smt2.smt2  design_smt2.ys
am_radio/fpga/formal/wd_prove/: PASS  logfile.txt  status.path  wd_prove.xml
am_radio/fpga/formal/wd_prove/engine_0/: logfile_basecase.txt
am_radio/fpga/formal/wd_prove/model/: design.ys  design_prep.ys  design_smt2.ys
am_radio/fpga/formal/wd_prove/src/: wd.v
am_radio/gui/: mock_server.py  package-lock.json  package.json
am_radio/gui/src/: index.html
am_radio/gui/src-tauri/: Cargo.toml  tauri.conf.json
am_radio/gui/src-tauri/src/: mock_server.rs  state_machine.rs
am_radio/gui/src/js/: controller.js  event_bus.js  model.js  view.js
past/: .gitmodules  AM.m  am-timeline.py  audit_log.txt  command.rs.old  comparefilter.py  generate_test_audio.py  hpsdr_am_transmit.py  local.py  mock_server.py  pyproject.toml  scpi_am_500k_1k.py  scpi_am_all_carriers.py  scpi_am_band_test.py  scpi_am_transmit.py  scpi_capacity_am_band.py  scpi_capacity_full_test.py  scpi_capacity_test.py  scpi_carrier_500k.py  scpi_complex_wave.py  scpi_multicarrier_2mhz.py  scpi_multicarrier_correct.py  scpi_off.py  scpi_simple_test.py  scpi_test_500k.py  scpi_two_sines.py  scpi_voice.py  test.py  test_am_local.py  test_hpsdr.py  test_voice.aiff  transmit_am.py  transmit_to_rp.py  visualize_am_clear.py  visualize_waves.py  visualize_waves_clear.py
past/pygui/: requirements.txt
past/src-tauri-old/src/: retry.rs
past/tests/: __init__.py  conftest.py
pygui/: README.md  tunnel_am_breakin_gui.py
tunnel_am_breakin_gui/: run.py  settings.json
tunnel_am_breakin_gui/tunnel_am_breakin/: README.md  __init__.py  __main__.py  app.py  configs.py  controllers.py  models.py  requirements.txt  scpi_client.py  tags.py  themes.py  ui_builder.py  views.py
ugl_am_radio/: .coverage  .coveragerc  README.md  am_scpi_server.py  audit_log.txt  ci.yml  config.py  config.yaml  controller.py  event_bus.py  main.py  mock_server.py  model.py  pyproject.toml  requirements-dev.txt  requirements.txt
ugl_am_radio/fpga/: am_mod.sv  am_radio_ctrl_with_watchdog.v  axi_audio_buffer.v  nco_sin.v  watchdog_timer.v
ugl_am_radio/fpga/formal/: README.md  fix_vcd.py  watchdog.sby  watchdog_formal.v  wd.sby  wd.v
ugl_am_radio/fpga/formal/watchdog/: status.sqlite  status.sqlite-shm
ugl_am_radio/fpga/formal/watchdog_bmc/: PASS  config.sby  logfile.txt  status  watchdog_bmc.xml
ugl_am_radio/fpga/formal/watchdog_bmc/engine_0/: logfile.txt
ugl_am_radio/fpga/formal/watchdog_bmc/model/: design_prep.ys  design_smt2.smt2
ugl_am_radio/fpga/formal/watchdog_cover/: PASS  config.sby  logfile.txt  watchdog_cover.xml
ugl_am_radio/fpga/formal/watchdog_cover/engine_0/: logfile.txt  trace0.smtc  trace0.vcd  trace0.yw  trace0_tb.v  trace1.smtc  trace1.vcd  trace1.yw  trace1_tb.v  trace2.smtc  trace2.vcd  trace2.yw  trace2_tb.v  trace3.smtc  trace3.vcd  trace3.yw  trace3_tb.v  trace4_tb.v
ugl_am_radio/fpga/formal/watchdog_cover/model/: design.il  design.json  design_prep.il  design_prep.ys  design_smt2.smt2
ugl_am_radio/fpga/formal/watchdog_prove/: PASS  logfile.txt  watchdog_prove.xml
ugl_am_radio/fpga/formal/watchdog_prove/engine_0/: logfile_basecase.txt
ugl_am_radio/fpga/formal/wd/: status.sqlite  status.sqlite-shm
ugl_am_radio/fpga/formal/wd_cover/: PASS  config.sby  logfile.txt  wd_cover.xml
ugl_am_radio/fpga/formal/wd_cover/engine_0/: trace0.yw  (+16 more)
ugl_am_radio/fpga/formal/wd_prove/: PASS  config.sby  logfile.txt  wd_prove.xml
ugl_am_radio/gui/: README.md  api.py  config.py  event_bus.py  mock_server.py  model.py  package-lock.json  package.json
ugl_am_radio/gui/src/: index.html  index.html.backup
ugl_am_radio/gui/src-tauri/: Cargo.toml  add_tests.sh  tauri.conf.json
ugl_am_radio/gui/src-tauri/src/: Cargo.toml  commands.rs  config.rs  event_bus.rs  main.rs  model.rs  retry.rs  state_machine.rs
ugl_am_radio/gui/src-tauri/src-backup/: commands.rs  config.rs  mock_server.rs
ugl_am_radio/gui/src/js/: controller.js  view.js
ugl_am_radio/tests/: __init__.py  conftest.py  test_controller.py  test_model.py
ugl_am_radio_12ch/: README.md  config.py  controller.py  main.py  mock_server.py  model.py
ugl_am_radio_12ch/fpga/: am_radio_ctrl.v  am_radio_dsp.v  am_scpi_server.py
ugl_am_radio_v2/: config.py  controller.py  main.py
(+17 files in other folders)
