[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugl-am-radio"
version = "1.0.0"
description = "GUI Control System for AM Radio Broadcast Hardware"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "William Park", email = "william@example.com"}
]
keywords = ["gui", "scpi", "fpga", "radio", "broadcast", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "PySide6>=6.4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/Park07/amradio"
Repository = "https://github.com/Park07/amradio"
Documentation = "https://github.com/Park07/amradio#readme"

[project.scripts]
ugl-am-radio = "main:main"

[tool.setuptools.packages.find]
where = ["."]

# =============================================================================
# Black Configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# =============================================================================
# isort Configuration
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["model", "controller", "config"]

# =============================================================================
# pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
omit = [
    "main.py",
    "mock_server.py",
    "tests/*",
]
source = ["."]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 50
show_missing = true

# =============================================================================
# mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
]

# =============================================================================
# flake8 Configuration (via .flake8 or setup.cfg)
# =============================================================================
# Note: flake8 doesn't support pyproject.toml natively
# See .flake8 file for flake8 configuration

