[package]
name = "ugl-radio-control"
version = "0.1.0"
description = "UGL AM Radio Control GUI"
authors = ["William Park"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "process-exit", "http-all", "process-relaunch", "shell-open", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
