[package]
name = "ugl-radio-rust"
version = "1.0.0"
description = "UGL AM Radio Control System - Rust Backend"
authors = ["William Park"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "1.5", features = ["shell-open"] }

# Async runtime
tokio = { version = "1.34", features = ["full", "sync", "time", "net", "io-util", "macros", "rt-multi-thread"] }

# Serialization (for JSON to/from JavaScript)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time/date handling
chrono = "0.4"

# Logging (optional but recommended)
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Optimize for size (smaller binary)
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
